cmake_minimum_required(VERSION 4.0)
project(C C)

set(CMAKE_C_STANDARD 17)

add_executable(C
        24120205049_YusufUzun_LAB4-1.c
        24120205049_YusufUzun_LAB4-2.c
        24120205049_YusufUzun_LAB4-3.c
        24120205049_YusufUzun_LAB5.c
        24120205049_YusufUzun_LAB6-1.c
        SLL.c
        24120205049_YusufUzun_LAB6-2.c
        DLL.c
        Stack.c
        Queue.c
        Tree.c
        BST_Tree.c
        AVL_Tree.c
        Min_Heap.c
        LAB9-1.c
        LAB9-2.c
        Hash.c
)
